--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -12,9 +12,9 @@
 	},
 	"compileType": "game",
 	"libVersion": "2.2.0",
-	"appid": "touristappid",
-	"projectname": "SIjump",
-	"isGameTourist": true,
+	"appid": "wx19da3cfb1f3d57eb",
+	"projectname": "Sljump",
+	"isGameTourist": false,
 	"condition": {
 		"search": {
 			"current": -1,
